perf: :building_construction: Make Search Engine Optimization by modifying the HTML-header.
@SverreNystad

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="GalacticPathFinder is a website to aid understanding of graph traversal algorithms by visualizing how they explore a map with obstacles, and find a path between two nodes."
+    />
+    <meta
+      name="keywords"
+      content="graph traversal, pathfinding, algorithms, visualization, a star, A*, BFS, DFS, breadth first search, depth first search, shortest path algorithms, shortest path, algorithm visualization, algorithms and data structures, CLRS"
+    />
     <title>GalacticPathFinder</title>
   </head>
   <body>
